src/style.css
* {
    margin: 0;
    padding: 0;
}


.webgl {
    position: fixed;
    top: 0;
    left: 0;
    outline: none;
}

.home {
    position: fixed;
    z-index: 1;
    padding: 1rem;
    top: 90%;
    left: 50%;
    transform: translateX(-50%);
    display: none;
    cursor: pointer;
}

html,
body {
    overflow: hidden;
}

body {
    margin: 0;
}

#css {
    position: fixed;
    z-index: 1;
    pointer-events: none;
    height: 100vh;
}

#leftDoor {
    position: fixed;
    z-index: 1;
    width: 100%;
    height: 100%;
    pointer-events: none;
}

#rightDoor {
    position: fixed;
    z-index: 1;
    width: 100%;
    height: 100%;
    pointer-events: none;
}

#billBoard {
    height:213px;
    width:128px;
    overflow: hidden;
    text-align: center;
    opacity: 0;
}

#billBoard img {
    width: 100%;
    display: block;
}

#startButton {
    position: fixed;
    z-index: 1;
    display: none;
}

